--- a/aisi.html
+++ b/aisi.html
@@ -8,16 +8,21 @@
 <body>
     <div class="overlay"></div>
     <div class="overlay2"></div>
-    <h1>საზოგადოებრივი ორგანიზაცია აისი</h1>
-    <p class="P">„ს.ო. აისი” არის აპოლიტიკური, საზოგადოებრივი ორგანიზაცია, რომელიც იდეოლიგიურად ჩამოყალიბდა 2008 წელს, ხოლო ოფიციალურად დარეგისტრირდა 2009 წლის აგვისტოში.
-        „აისი“ იცავს და პატივს სცემს ისეთ ღირებულებებს, როგორიცაა ქვეყნის ტერიტორიული მთლიანობა, ინდივიდუალური თავისუფლება, ადამიანის უფლებები და კანონის უზენაესობა.
-        ორგანიზაციის შექმნის მიზანია საზოგადოებაში პატრიოტული განწყობის ამაღლება, სამხედრო-სამოქალაქო თავდაცვითი საკითხების პოპულარიზაცია, ცოდნის ამაღლება და სამხედრო-პრაქტიკული უნარ-ჩვევების განვითარება.
-        „აისის” მისიას წარმოადგენს ხელი შეუწყოს ქვეყნისთვის ღირსეული, ერთგული, ეროვნული ფასეულობებისა და ღირებულებების მქონე ადამიანების ჩამოყალიებებას.
-        „აისი“ ყოველწლიურად ორგანიზებას უწევს რამდენიმე თვიან კურსებს, რომლებიც აერთიანებს საბაზისო სამხედრო და სალაშქრო თემატიკის კომპონენტებს. თეორიულ სწავლებასთან ერთად კურსი მოიცავს პრაქტიკულ სავარჯიშოებს და საველე სწავლებებს. კურსზე მონაწილეობის მიღება შეუძლია ყველა მსურველს მიუხედავად სქესისა და პოლიტიკური შეხედულებებისა. კურსის ფარგლებში, მსურველთათვის სრულიად უფასოდ, ორგანიზაცია უზრუნველყოფს საბაზისო სამხედრო და სალაშქრო საქმის სპეფიციკის შესწავლას: ნავიგაცია, ტოპოგრაფიის საფუძვლები (რუკის კითხვა), ადგილზე ორიენტირება, თვითგადარჩენის საშუალებები, პირველადი სამედიცინო დახმარება, იარაღის თეორიული შესწავლა, შეიარაღების ნომენკლატურა, სალაშქრო აღჭურვილობის სპეციფიკა, საბანაკე ადგილის შერჩევა და ა.შ.
-        კურსის გავლის შემდეგ, მონაწილე ავტომატურად ხდება ორგანიზაციის წევრი და შესაძლებლობა აქვს ჩაერთოს ორგზანიციის მიერ დაგეგმილ ყველა აქტივობაში, იქნება ეს სამოყვარულო ალპინიზმი, კლდეზე ცოცვა, საფეხმავლო ბილიკებზე ლაშქრობა თუ ეკოსაგანმანათლებლო/დასუფთავების აქციების ორგანიზება და მათში ჩართვა.
-        ორგანიზაცია აქტიურად თანამშრომლობს საქართველოს თავდაცვით სამინისტროსთან ურთიერთთანამშრომლობის მემორანდუმის საფუძველზე. სამხედრო-სამოქალაქო თავდაცვით საკითხებში ახალგაზრდა თაობის ცოდნის ამაღლების მიზნით, ეტაპობრივად იგეგმება და ტარდება სხვადასხვა სახის ღონისძიებები, ორმხრივი შეხვედრები, სწავლებები და კონსულტაციები.
-        ორგანიზაცია დაფუძნებულია მოხალისეობრივ შემოწირულობებზე. ნებისმიერ მსურველს შეუძლია თანამონაწილეობა მიიღოს საზოგადოებისათვის ძალიან საჭირო საქმეში და ფინანსური მხარდაჭერა გაუწიოს ორგანიზაციას.
-    </p>
+    <header>
+        <h1>საზოგადოებრივი ორგანიზაცია აისი</h1>
+    </header>
+    <main>
+        <p class="P">„ს.ო. აისი” არის აპოლიტიკური, საზოგადოებრივი ორგანიზაცია, რომელიც იდეოლიგიურად ჩამოყალიბდა 2008 წელს, ხოლო ოფიციალურად დარეგისტრირდა 2009 წლის აგვისტოში.
+            „აისი“ იცავს და პატივს სცემს ისეთ ღირებულებებს, როგორიცაა ქვეყნის ტერიტორიული მთლიანობა, ინდივიდუალური თავისუფლება, ადამიანის უფლებები და კანონის უზენაესობა.
+            ორგანიზაციის შექმნის მიზანია საზოგადოებაში პატრიოტული განწყობის ამაღლება, სამხედრო-სამოქალაქო თავდაცვითი საკითხების პოპულარიზაცია, ცოდნის ამაღლება და სამხედრო-პრაქტიკული უნარ-ჩვევების განვითარება.
+            „აისის” მისიას წარმოადგენს ხელი შეუწყოს ქვეყნისთვის ღირსეული, ერთგული, ეროვნული ფასეულობებისა და ღირებულებების მქონე ადამიანების ჩამოყალიებებას.
+            „აისი“ ყოველწლიურად ორგანიზებას უწევს რამდენიმე თვიან კურსებს, რომლებიც აერთიანებს საბაზისო სამხედრო და სალაშქრო თემატიკის კომპონენტებს. თეორიულ სწავლებასთან ერთად კურსი მოიცავს პრაქტიკულ სავარჯიშოებს და საველე სწავლებებს. კურსზე მონაწილეობის მიღება შეუძლია ყველა მსურველს მიუხედავად სქესისა და პოლიტიკური შეხედულებებისა. კურსის ფარგლებში, მსურველთათვის სრულიად უფასოდ, ორგანიზაცია უზრუნველყოფს საბაზისო სამხედრო და სალაშქრო საქმის სპეფიციკის შესწავლას: ნავიგაცია, ტოპოგრაფიის საფუძვლები (რუკის კითხვა), ადგილზე ორიენტირება, თვითგადარჩენის საშუალებები, პირველადი სამედიცინო დახმარება, იარაღის თეორიული შესწავლა, შეიარაღების ნომენკლატურა, სალაშქრო აღჭურვილობის სპეციფიკა, საბანაკე ადგილის შერჩევა და ა.შ.
+            კურსის გავლის შემდეგ, მონაწილე ავტომატურად ხდება ორგანიზაციის წევრი და შესაძლებლობა აქვს ჩაერთოს ორგზანიციის მიერ დაგეგმილ ყველა აქტივობაში, იქნება ეს სამოყვარულო ალპინიზმი, კლდეზე ცოცვა, საფეხმავლო ბილიკებზე ლაშქრობა თუ ეკოსაგანმანათლებლო/დასუფთავების აქციების ორგანიზება და მათში ჩართვა.
+            ორგანიზაცია აქტიურად თანამშრომლობს საქართველოს თავდაცვით სამინისტროსთან ურთიერთთანამშრომლობის მემორანდუმის საფუძველზე. სამხედრო-სამოქალაქო თავდაცვით საკითხებში ახალგაზრდა თაობის ცოდნის ამაღლების მიზნით, ეტაპობრივად იგეგმება და ტარდება სხვადასხვა სახის ღონისძიებები, ორმხრივი შეხვედრები, სწავლებები და კონსულტაციები.
+            ორგანიზაცია დაფუძნებულია მოხალისეობრივ შემოწირულობებზე. ნებისმიერ მსურველს შეუძლია თანამონაწილეობა მიიღოს საზოგადოებისათვის ძალიან საჭირო საქმეში და ფინანსური მხარდაჭერა გაუწიოს ორგანიზაციას.
+        </p>
+    </main>
+    <footer>
         <div class="container">
             <a href="https://www.facebook.com/SazogadoebriviOrganizatsiaAisi" target="_blank">
                 <img class="FBIcon" src="icons8-facebook-50px.svg" alt="">
@@ -27,6 +32,7 @@
             </a>
         </div>
         <p class="banks">TBC #GE21TB0677636080100004 <br> BOG #GE84BG0000000428474100</p>
+    </footer>
         <script src="aisi.js"></script>
 </body>
 </html>
