--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>საზოგადოებრივი ორგანიზაცია აისი</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="aisi.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="overlay"></div>
